# SoftProcessor

./: CMakeLists.txt  Doxyfile  README.md  SoftProcessor  asm2.txt  asm_in.txt  asm_out.txt  assembler.cpp  assembler.h  commands.h  err_codes.h  main.cpp  processor.cpp  processor.h
Assembler/: asm2.txt  asm_in.txt  asm_out.txt  assembler.cpp  assembler.h  labels.cpp  labels.h
Common/: commands.h  err_codes.h  jumps.h  registers.h
IOFiles/: asm2.txt  asm3.txt  asm_fact.txt  asm_flt.txt  asm_lab.txt  asm_out.txt  asm_sqrt.txt
Processor/: processor.cpp  processor.h
SimpleStack/: data_types.h  stack_tests.cpp  stack_tests.h  stack_utils.cpp  stack_utils.h
